After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618324 - rtp payloader don't put the duration on their output buffers
rtp payloader don't put the duration on their output buffers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.10.19
Other Linux
: Normal normal
: 0.10.30
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-05-10 22:59 UTC by Olivier Crête
Modified: 2010-05-13 09:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
basertpaudiopayload: Set duration on buffers (1.04 KB, patch)
2010-05-10 22:59 UTC, Olivier Crête
committed Details | Review
basertpaudiopayload: Add extra frame for non-complete frame lengths (1.73 KB, patch)
2010-05-10 23:16 UTC, Olivier Crête
committed Details | Review
celtpay: Accumulate duration of accumulated parts (1.20 KB, patch)
2010-05-10 23:20 UTC, Olivier Crête
none Details | Review

Description Olivier Crête 2010-05-10 22:59:13 UTC
Created attachment 160787 [details] [review]
basertpaudiopayload: Set duration on buffers

The payloaders know the duration, but they don't put it on their output buffers. I'm attaching a patch against GstBaseRtpAudioPayload. More patches to follow.
Comment 1 Olivier Crête 2010-05-10 23:16:59 UTC
Created attachment 160789 [details] [review]
basertpaudiopayload: Add extra frame for non-complete frame lengths

Some payloaders like rtpg729pay can add a shorter frame at the end of a
RTP packet. We need to count it like a full frame for timestamps.
Comment 2 Olivier Crête 2010-05-10 23:20:02 UTC
Created attachment 160790 [details] [review]
celtpay: Accumulate duration of accumulated parts
Comment 3 Wim Taymans 2010-05-13 09:46:27 UTC
The last patch seems to work around a bug in the current code. This is what the code should have done:

commit 3e4bc043a567a954a84397aedb1064b0a1a7de61
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Thu May 13 11:30:27 2010 +0200

    celtpay: fix queue duration calculations
    
    Don't blindly add the durations of incomming buffers to the total queued
    duration because it might be invalid. Mark the total queued duration invalid
    when we receive an invalid incomming timestamp because that's when we lose track
    of the total queued duration.
    
    Fixes #618324